# webgpu_sandbox

./: .clang-format  .gitmodules  CMakeLists.txt  main.cpp  wgpuCmakeSources.txt
src/: shader_compiler.cpp  shader_compiler.hpp  window.hpp  window.mm
